--- a/ch3-wind/tex/intro/intro.tex
+++ b/ch3-wind/tex/intro/intro.tex
@@ -34,17 +34,17 @@ The major wind forecasting companies in North America and Europe use numerical w
 
 The influence of soil moisture and land surface heating on wind prediction has received little attention in the wind energy forecasting literature, even though fluxes of energy at the land surface are known to influence regional circulations.  Soil moisture heterogeneity, and the resulting contrasts in sensible heat flux, can drive mesoscale circulations on land with wind speeds of several m/s [Chen and Avissar, 1994; Avissar and Schmidt, 1998].  Thermal contrast between land and ocean can drive sea-breeze circulations with wind speeds up to 10 m/s [Miller \textit{et al.}, 2003], and the strength of the thermal contrast and of the resulting wind depends in part on soil moisture because of its influence on land surface temperature [Physick, 1980].  In one of the few wind energy papers to discuss the effect of soil moisture on wind forecasts, Marjanovic \textit{et al.} [2014] show that the forecast at a California wind farm is sensitive to initial soil moisture, and in a related study, Wharton \textit{et al.} [2011] show that soil moisture can be important for forecasting wind ramps, which remain a challenge in wind energy forecasting [Carcangiu \textit{et al.}, 2014; Ellis \textit{et al.}, 2014].
 
-California low-level winds are strongly influenced by the contrast of land surface heating with the adjacent cool ocean [Zhong \textit{et al.}, 2004], and as such, winds at the Solano wind farm are likely to depend on soil moisture.  Solano sits in a valley pass between the ocean and California's Central Valley (Figure \ref{fig:windSol_domainmap} \textbf{ADD SYMBOL FOR SOLANO}), and onshore winds are channeled and accelerated through the pass; this topographic channeling also constrains the wind direction at low levels near Solano to remain near westerly [Zhong \textit{et al.}, 2004; Mansbach, 2010].  The diurnal cycle of land surface heating drives a marked diurnal cycle in wind speed in the Solano area, with minimum wind speeds in the morning and maximum speeds in the late afternoon and evening [Zhong \textit{et al.}, 2004; Mansbach, 2010].  Additionally, the strongest winds occur in the summer at Solano, in part due to generally stable synoptic conditions created by the north Pacific summertime high pressure that allow the strong surface temperature contrast between ocean and land to drive onshore flow [Zhong \textit{et al.}, 2004; Mansbach, 2010]. Because winds at Solano are generated partly by land surface heating contrasts, it is likely that errors in soil moisture initial conditions will create errors in NWP wind forecasts.
+California low-level winds are strongly influenced by the contrast of land surface heating with the adjacent cool ocean [Zhong \textit{et al.}, 2004], and as such, winds at the Solano wind farm are likely to depend on soil moisture.  Solano sits in a valley pass between the ocean and California's Central Valley (Figure \ref{fig:windSol_domainmap} \textbf{ADD SYMBOL FOR SOLANO}), and onshore winds are channeled and accelerated through the pass; this topographic channeling also constrains the wind direction at low levels near Solano to remain near westerly [Zhong \textit{et al.}, 2004; Mansbach, 2010].  The diurnal cycle of land surface heating drives a marked diurnal cycle in wind speed in the Solano area, with minimum wind speeds in the morning and maximum speeds in the late afternoon and evening [Zhong \textit{et al.}, 2004; Mansbach, 2010].  Additionally, the strongest winds occur in the summer at Solano, in part due to generally stable synoptic conditions created by the north Pacific summertime high pressure that allow the strong surface temperature contrast between ocean and land to drive onshore flow [Zhong \textit{et al.}, 2004; Mansbach, 2010]. Because land surface heating is important for generating winds, it is likely that errors in soil moisture initial conditions will create errors in NWP wind forecasts.
 
-Better soil moisture information may improve wind forecasts at Solano and similar sites.  As such, we seek to understand the sensitivity of Solano wind to soil moisture, and the physical mechanism underlying the sensitivity.  We investigate the following questions:
+Better soil moisture information may improve wind forecasts at Solano and similar sites.  In this work, we seek to understand the sensitivity of Solano wind to soil moisture, and the physical mechanism underlying the sensitivity.  We investigate the following questions:
 \begin{itemize}
-\item On which regions' soil moisture does Solano wind depend?
+\item Which region's soil moisture has the maximum impact on wind speed at Solano?
 \item At what time of day is Solano wind most sensitive to soil moisture?  What changes in the amplitude and timing of the wind diurnal cycle result from changes in soil moisture?
 \item How do wind forecast errors scale with soil moisture changes/errors?  Are there particular ranges of soil moisture where wind forecasts are particularly sensitive?
 \item What is the physical mechanism for soil moisture's influence on Solano winds?
 \end{itemize}
 
-To answer these questions, we conduct experiments with a regional atmospheric model commonly used in wind energy forecasting research.  We perturb soil moisture in different California regions and to different degrees and quantify the response of Solano turbine-level wind magnitude and timing.  Moreover, we identify regions where pressure correlates with Solano wind and relate pressure changes to changes in surface heating; and we attribute changes in wind to changes in the terms of the momentum budget.
+To answer these questions, we conduct numerical experiments with a regional atmospheric model commonly used in wind energy forecasting research.  We perturb soil moisture in different California regions and to different degrees and quantify the response of Solano turbine-level wind magnitude and timing.  Moreover, we identify regions where pressure correlates with Solano wind and relate pressure changes to changes in surface heating; and we attribute changes in wind to changes in the terms of the momentum budget.
 
 %The model is an imperfect representation of the world; it captures many of the important processes, but we do not contend that it represents land surface fluxes perfectly.  In this study, we both investigate the real-world physical sensitivity of the winds to soil moisture, to the degree possible given the model errors, and also characterize the sensitivity within the model itself.  Even if the internal model sensitivity is not fully realistic, this tool is in common usage in wind energy forecasting, and thus it is important to understand the sensitivity of the tool to the inputs.
 
