--- a/ch3-wind/tex/methods/methods.tex
+++ b/ch3-wind/tex/methods/methods.tex
@@ -27,8 +27,8 @@ The sensitivity of Solano wind forecasts to soil moisture is tested using numeri
 We run WRF with two nested domains centered on the Solano wind farm (Figure \ref{fig:windSol_domainmap}); the domains are described in Table \ref{table:windSol_domains}.  As in Chapter XX, the outer grid forces the lateral boundaries of the inner grid, and the inner grid feeds back to the outer grid across the region where the two domains overlap [Skamarock et al., 2008].  The outer and inner domain are Arakawa-C grids with horizontal resolution of 8.1 km and 2.7 km, respectively; preliminary tests with a third finer grid (0.9 km) showed little change in the forecasted winds, similar to the results of Marjanovic \textit{et al.} [2014], who found little accuracy improvement with horizontal resolution below 2.7 km in their simple terrain case.  The domain has 45 vertical levels, with a minimum spacing of $\sim$30 m near the surface and increasing with height, interpolated quadratically by the log of pressure (the default WRF setting); turbine-level (60-100 m) wind forecasts are not very sensitive to vertical resolution beyond about 40 levels with this vertical interpolation scheme in WRF [Marjanovic \textit{et al.}, 2014, and references therein].
 
 \begin{figure}[here]
-\includegraphics[width=1\textwidth]{ch3-wind/img/domain_map.pdf}
-\caption{WRF model domains, showing (a) topographic height in m, and (b) regions used for soil moisture experiments in this study: the Coast Range (CR, blue), Central Valley (CV, green), and Sierra Nevada (SN, red). d01 refers to the outer model domain, and d02 refers to the inner domain.}
+\includegraphics[width=1\textwidth]{ch3-wind/img/domain_map_cropped.pdf}
+\caption{WRF model domains, showing (a) topographic height in m, and (b) regions used for soil moisture experiments in this study: the Coast Range (CR, blue), Central Valley (CV, green), and Sierra Nevada (SN, red). d01 refers to the outer model domain, and d02 refers to the inner domain.  The red star symbol shows the location of the Solano Wind Project.}
 \label{fig:windSol_domainmap}
 \end{figure}
 
@@ -52,7 +52,7 @@ All experiments are run for the period 2009-06-26 00:00 UTC to 2009-07-11 00:00 
 
 \subsection{Soil moisture experiments}
 
-The model experiments are listed in Table \ref{table:windSol_runlist}.  In the first set of experiments, we test the sensitivity of Solano winds to soil moisture in different large-scale regions of California.  In cases dryCR, dryCV, and drySN, the background volumetric soil moisture (model variable SMOIS, m$^3$ water/m$^3$ total volume) is set to 0.25, and the soil moisture of the test region (respectively, the Coast Range, Central Valley, and Sierra Nevada, shown in Figure \ref{fig:windSol_domainmap}b) is set to 0.1.  These test cases are compared with a control case where all land has soil moisture of 0.25.  In cases wetCR, wetCV, and wetSN, the background soil moisture is set to 0.1, and the soil moisture of the test region is set to 0.25.  These test cases are compared with a control case where all land has soil moisture of 0.1.
+We conduct three sets of model experiments, listed in Table \ref{table:windSol_runlist}.  In the first set of experiments, we test the sensitivity of Solano winds to soil moisture in different large-scale regions of California.  In cases dryCR, dryCV, and drySN, the background volumetric soil moisture (model variable SMOIS, m$^3$ water/m$^3$ total volume) is set to a moderately wet value of 0.25, and the soil moisture of the test region (respectively, the Coast Range, Central Valley, and Sierra Nevada, shown in Figure \ref{fig:windSol_domainmap}b) is set to a dry value of 0.1.  These test cases are compared with a control case where all land has the moderately wet soil moisture value of 0.25.  In cases wetCR, wetCV, and wetSN, the background soil moisture is set to the dry value of 0.1, and the soil moisture of the test region is set to the moderately wet value of 0.25.  These test cases are compared with a control case where all land has the dry soil moisture value of 0.1.  For reference, a soil moisture value of 0.25 m$^3$/m$^3$ represents XX\% of field capacity of the dominant soil type XX, and XX\% of the average soil moisture in XX region for XX years in NARR; 0.1 m$^3$/m$^3$ represents XX\% of field capacity of the dominant soil type XX, and XX\% of the average soil moisture in XX region for XX years in NARR.
 
 The next set of experiments tests how the Solano wind response scales with soil moisture in the Central Valley, with a normal-to-wet background in the Coast Range and Sierra Nevada.  In cases CVXX (where XX is a numeric value), the Coast Range and Sierra Nevada regions' soil moisture is set to 0.2, and the Central Valley soil moisture is set to the value specified by XX.  These test cases are compared with a control case where all land has soil moisture of 0.2.
 %In cases CVXXdry, the Coast Range and Sierra Nevada regions' soil moisture is set to 0.1, and the Central Valley soil moisture again is specified by XX.
@@ -74,11 +74,11 @@ Experiment & Run name & Background SMOIS (kg/kg) & Perturbed SMOIS region & Pert
 1 & wetCR & 0.1 & Coast Range & 0.25 \\
 1 & wetCV & 0.1 & Central Valley & 0.25 \\
 1 & wetSN & 0.1 & Sierra Nevada & 0.25 \\
-2 & CA-0.2 & 0.2 & none & n/a \\
+2 & CA-0.25 & 0.25 & none & n/a \\
 2 & dryCR & 0.25 & Coast Range & 0.1 \\
 2 & dryCV & 0.25 & Central Valley & 0.1 \\
 2 & drySN & 0.25 & Sierra Nevada & 0.1 \\
-3 & CA-0.25 & 0.25 & none & n/a \\
+3 & CA-0.2 & 0.2 & none & n/a \\
 3 & CV0.05 & 0.2 & Central Valley & 0.05 \\
 3 & CV0.1 & 0.2 & Central Valley & 0.1 \\
 3 & CV0.15 & 0.2 & Central Valley & 0.15 \\
@@ -93,8 +93,24 @@ Experiment & Run name & Background SMOIS (kg/kg) & Perturbed SMOIS region & Pert
 %CV0.35dry & 0.1 & Central Valley & 0.35 \\
 \hline
 \end{tabular}
-\caption{Model experiments: (1) Dry background, wet perturbation region; (2) Wet background, dry perturbation region; (3) Sensitivity to Central Valley soil moisture.}
+\caption{Model experiments, using regions shown in Figure \ref{fig:windSol_domainmap}(b): (1) Dry background, wet perturbation region; (2) Wet background, dry perturbation region; (3) Sensitivity to Central Valley soil moisture.}
 \label{table:windSol_runlist}
 \end{table}
+
+\subsection{Analysis of model output}
+\label{subsec:methods_model_output}
+
+The winds at turbine hub height at the Solano Wind Project are approximated using 60 m above ground level (AGL) winds at the WRF model grid point closest to 38.166N, 121.817W.  The rolling hills at the Solano Wind Project have a terrain height of 40-60 m; thus, the wind at hypothetical 60 m AGL wind turbine hubs at the Solano Wind Project is approximated using wind from 110 m above sea level (ASL).  All times are expressed in local time (Pacific Standard Time).
+
+Two types of anomalies are analyzed.  The first is the anomaly at each grid point ($i$, $j$), altitude ($z$), and time ($t$), from the horizontal average pressure at that altitude and time ($\widehat{p_{z, t}}$):
+\begin{equation}
+\delta p_{i, j, z, t} = p_{i, j, z, t} - \widehat{p_{z, t}}.
+\end{equation}
+The second anomaly is the difference between a test case and its corresponding control case:
+\begin{equation}
+\Delta x = x_{test} - x_{control}
+\end{equation}
+for an arbitrary variable x.
+
 
 %\end{document}
