--- a/ch3-wind/tex/refs/refs.tex
+++ b/ch3-wind/tex/refs/refs.tex
@@ -1,11 +1,102 @@
 \section{References}
+%\begin{thebibliography}{1}
 
-Electric Power Monthly with Data for July 2014
+%\bibitem{avissar} Avissar, R., and T. Schmidt (1998), An evaluation of the scale at which ground-surface heat flux patchiness affects the convective boundary layer using large-eddy simulations, \textit{Journal of the Atmospheric Sciences}, 55(16), 2666--2689.
 
-GE Energy, Western wind and solar integration study, May 2010.
+%\bibitem{bedard}
+%B\'edard, J., W. Yu, Y. Gagnon, and C. Masson (2013), Development of a geophysic model output statistics module for improving short-term numerical wind predictions over complex sites, \textit{Wind Energy}, 16(8), 1131--1147.
+%
+%\bibitem{carc}
+%Carcangiu 2014
+%
+%\bibitem{carv}
+%Carvalho 2012
+%
+%\bibitem{chen}
+%Chen and Avissar 1994
+%
+%\bibitem{deppe}
+%Deppe 2013
+%
+%\bibitem{draxl}
+%Draxl 2014
+%
+%\bibitem{drusch}
+%Drusch 2007
+%
+%\bibitem{eid}
+%Eidenshink, J. C., and J. L. Faundeen (1994). The 1 km AVHRR global land data set: first stages in implementation. \textit{International Journal of Remote Sensing}, 15(17), 3443-3462.
+%
+%\bibitem{ellis}
+%Ellis 2014
+%
+%\bibitem{fab}
+%Fabbri 2005
+%
+%\bibitem{foley}
+%Foley 2012
+%
+%\bibitem{ge}
+%GE Energy, Western wind and solar integration study, May 2010.
+%
+%\bibitem{ipcc}
+%IPCC, 2013: Climate Change 2013: The Physical Science Basis. Contribution of Working Group I to the Fifth Assessment Report of the Intergovernmental Panel on Climate Change [Stocker, T.F., D. Qin, G.-K. Plattner, M. Tignor, S.K. Allen, J. Boschung, A. Nauels, Y. Xia, V. Bex and P.M. Midgley (eds.)]. Cambridge University Press, Cambridge, United Kingdom and New York, NY, USA, 1535 pp.
+%
+%\bibitem{jac}
+%Jacobson, M. Z., and M. A. Delucchi (2011), Providing all global energy with wind, water, and solar power, Part I: Technologies, energy resources, quantities and areas of infrastructure, and materials, \textit{Energy Policy}, 39(3), 1154--1169.
+%
+%\bibitem{kusiac}
+%Kusiac 2009
+%
+%\bibitem{mans}
+%Mansbach 2010
+%
+%\bibitem{marj}
+%Marjanovic 2014
+%
+%\bibitem{miller}
+%Miller 2003
+%
+%\bibitem{millerwhite}
+%Miller and White 1998
+%
+%\bibitem{mont}
+%Monteiro 2009
+%
+%\bibitem{ncep}
+%National Centers for Environmental Prediction/National Weather Service/NOAA/U.S. Department of Commerce (1998), GCIP NCEP Eta model output, http://rda.ucar.edu/datasets/ds609.2/, Research Data Archive at the National Center for Atmospheric Research, Computational and Information Systems Laboratory, Boulder, Colo. (Updated monthly.) Accessed 9 Aug 2014.
+%
+%\bibitem{ortiz}
+%Ortiz-Garcia 2011
+%
+%\bibitem{phys}
+%Physick 1980
+%
+%\bibitem{pinson}
+%Pinson and Madsen 2009
+%
+%\bibitem{pleim}
+%Pleim 2007
+%
+%\bibitem{porter}
+%Porter and Rogers 2010
+%
+%\bibitem{ran}
+%Ranaboldo 2013
+%
+%\bibitem{rodell}
+%Rodell 2004
+%
+%\bibitem{skam}
+%Skamarock 2008
+%
+%\bibitem{eia}
+%U.S. Energy Information Administration (2014), Electric Power Monthly with Data for July 2014, \url{http://www.eia.gov/electricity/monthly/current_year/september2014.pdf}
+%
+%\bibitem{whart}
+%Wharton 2011
+%
+%\bibitem{zhong}
+%Zhong 2014
 
-IPCC
-
-Jacobson, M. Z., and M. A. Delucchi
-
-National Centers for Environmental Prediction/National Weather Service/NOAA/U.S. Department of Commerce (1998), GCIP NCEP Eta model output, http://rda.ucar.edu/datasets/ds609.2/, Research Data Archive at the National Center for Atmospheric Research, Computational and Information Systems Laboratory, Boulder, Colo. (Updated monthly.) Accessed 9 Aug 2014.
+%\end{thebibliography}
