--- a/ch3-wind/tex/results/results.tex
+++ b/ch3-wind/tex/results/results.tex
@@ -31,13 +31,19 @@ We first characterize the differences in Solano turbine-level wind resulting fro
 
 %Before presenting the Solano winds, we quantify the synoptic and land-surface-heating forcing in each case, and we characterize the control case winds.  The synoptic forcing, measured by wind speed at 500 hPa, varies little between the model runs (Figure \ref{fig:windSol_forcings}), and synoptic winds are weak on June 27 to July 5 and strong on July 6 to 11.  In all three regions, land surface sensible heat flux is approximately 200 W/m$^2$ greater at midday with wet soil moisture (0.25) than dry soil moisture (0.1).
 
-The low-level winds in these experiments follow a strong diurnal cycle, driven by the diurnal cycle of the temperature difference and thus the pressure difference between land and ocean.  Regional low-level winds from experiment 2 at 06:00, 14:00, 18:00, and 00:00 local time, averaged over the two-week experimental period at 60 m AGL (110 m ASL), are shown in Figure \ref{fig:windSol_WindMapsRg}.  In the control case CA-0.25 (Figure \ref{fig:windSol_WindMapsRg} first column), flow is strong through the Solano pass and splits into northward and southward branches in the Central Valley.  The southward branch is stronger than the northward branch in the morning and early afternoon (06:00 and 14:00), and the northward branch strengthens in the late afternoon and evening (18:00 and 00:00).  The pressure gradient from the San Francisco Bay to the Central Valley remains strong from 14:00 to 00:00 and weakens by 06:00.  \textbf{Note: I need to remake these plots to label the pressure change contours.}   The results are consistent with previous studies of California surface winds (Zhong \textit{et al.}, 2004; Mansbach, 2010).
+The low-level winds in these experiments follow a strong diurnal cycle, driven by the diurnal cycle of the temperature difference and thus the pressure difference between land and ocean.  Regional low-level winds from experiment 2 at 06:00, 14:00, 18:00, and 00:00 local time, averaged over the two-week experimental period at 60 m AGL (110 m ASL), are shown in Figure \ref{fig:windSol_WindMapsRg}.  In the control case CA-0.25 (Figure \ref{fig:windSol_WindMapsRg} first column), flow is strong through the Solano pass and splits into northward and southward branches in the Central Valley.  The southward branch is stronger than the northward branch in the morning and early afternoon (06:00 and 14:00), and the northward branch strengthens in the late afternoon and evening (18:00 and 00:00).  The pressure gradient from the San Francisco Bay to the Central Valley remains strong from 14:00 to 00:00 and weakens by 06:00.  The results are consistent with previous studies of California surface winds (\cite{zhong2004diurnal}; Zhong \textit{et al.}, 2004; Mansbach, 2010).
 
-\begin{figure}[here]
+%\afterpage{
+%\begin{figure}[here]
+\begin{FPfigure}
 \includegraphics[angle=90,origin=c,width=1\textwidth]{ch3-wind/img/wind_map_regions2.eps}
-\caption{Wind speed (color shading) and direction (vectors) and pressure (color contours) at 110 m ASL on the d02 domain, averaged by hour over the two-week period, for experiment 2.  (a)-(d) CA-0.25 control case.  (e)-(h) dryCR case, changes in wind and pressure.  (i)-(l) dryCV case, changes in wind and pressure.  (m)-(p) drySN case, changes in wind and pressure.  Top row: average for hour 06:00 for the whole run; second row: average for hour 14:00; third row: average for hour 18:00; bottom row: average for hour 00:00.}
+\caption{Wind speed (color shading) and direction (vectors) and pressure (color contours) at 110 m ASL on the d02 domain, averaged by hour over the two-week period, for experiment 2.  (a)-(d) CA-0.25 control case.  (e)-(h) dryCR case, changes in wind and pressure.  (i)-(l) dryCV case, changes in wind and pressure.  (m)-(p) drySN case, changes in wind and pressure.  Top row: average for hour 06:00 for the whole run; second row: average for hour 14:00; third row: average for hour 18:00; bottom row: average for hour 00:00.  Pressure contour interval is 0.5 hPa in (a)-(d) and 0.1 hPa in (e)-(p).}
 \label{fig:windSol_WindMapsRg}
-\end{figure}
+\end{FPfigure}
+%\end{figure}
+%}
+
+%\captionof{figure}{Wind speed (color shading) and direction (vectors) and pressure (color contours) at 110 m ASL on the d02 domain, averaged by hour over the two-week period, for experiment 2.  (a)-(d) CA-0.25 control case.  (e)-(h) dryCR case, changes in wind and pressure.  (i)-(l) dryCV case, changes in wind and pressure.  (m)-(p) drySN case, changes in wind and pressure.  Top row: average for hour 06:00 for the whole run; second row: average for hour 14:00; third row: average for hour 18:00; bottom row: average for hour 00:00.  Pressure contour interval is 0.5 hPa in (a)-(d) and 0.1 hPa in (e)-(p).}
 
 \begin{figure}[here]
 \includegraphics[width=1\textwidth]{ch3-wind/img/solano_wind_wetbkd_dryrg_d02_level0.png}
@@ -150,7 +156,7 @@ In summary, the Central Valley soil moisture influences the Solano turbine-level
 
 Drier Central Valley soils increase Solano winds, while wetter Central Valley soils decrease Solano winds, relative to the moderately wet control of soil moisture = 0.2 (Figure \ref{fig:windSol_TseriesWindCV}.)  These changes can be up to 3 m/s, and they occur most consistently in the hours of 12:00 to 22:00 (Figure \ref{fig:windSol_DiffDiurnalCV0pt2}(b)), when they are 0.8-1.7 m/s on average in the driest Central Valley case (CV0.05).  The average changes during hours 12:00 to 22:00 scale approximately linearly with CV soil moisture (Figure \ref{fig:windSol_ShiftsMaxCV}).
 
-\clearpage
+%\clearpage
 
 \subsection{Physical mechanism}
 \label{subsec:PhysMech}
@@ -183,13 +189,13 @@ In order to identify the pressure gradient most relevant to Solano turbine-level
 
 \begin{figure}[here]
 \includegraphics[width=1\textwidth]{ch3-wind/img/pgrad_wind_CA0pt1_level110.png}
-\caption{CA-0.1 control case: Solano 60 m AGL (110 m ASL) wind (black) and average pressure difference OCN box minus NCV box (blue) and OCN box minus SCV box (green) at 110 m ASL.  The sign of the pressure difference is chosen to correspond with the $\frac{-1}{\rho} \frac{\partial p}{\partial x}$ term in the momentum budget.}
+\caption{Experiment 1 control case (CA-0.1): Solano 60 m AGL (110 m ASL) wind (black) and average pressure difference OCN box minus NCV box (blue) and OCN box minus SCV box (green) at 110 m ASL.  The sign of the pressure difference is chosen to correspond with the $\frac{-1}{\rho} \frac{\partial p}{\partial x}$ term in the momentum budget.}
 \label{fig:windSol_PgradWind}
 \end{figure}
 
 \begin{figure}[here]
 \includegraphics[width=1\textwidth]{ch3-wind/img/lag_corr_pdiff_combo_ncv_scv_d02_CA0pt1.png}
-\caption{CA-0.1 control case: lagged linear regression of Solano 60 m AGL (110 m ASL) wind against average pressure difference NCV box minus OCN box (dashed) and SCV box minus OCN box (solid).  Correlations are only shown for speed, because u and v velocity component results are very similar.}
+\caption{Experiment 1 control case (CA-0.1): lagged linear regression of Solano 60 m AGL (110 m ASL) wind against average pressure difference NCV box minus OCN box (dashed) and SCV box minus OCN box (solid).  Correlations are only shown for speed, because u and v velocity component results are very similar.}
 \label{fig:windSol_LagCorrCtrl}
 \end{figure}
 
@@ -239,19 +245,23 @@ We proceed to investigate how changes in pressure in the soil moisture test case
 
 \subsubsection{Temperature controls on pressure}
 
-\begin{figure}[here]
-\includegraphics[width=0.9\textwidth]{ch3-wind/img/timeheight_T_pdiff_ocnbox_ncvbox_0pt25.png}
+%\begin{figure}[here]
+\begin{FPfigure}
+\includegraphics[width=0.9\textwidth]{ch3-wind/img/timeheight_T_pdiff_OCN_NCV_0pt25.png}
 \caption{Experiment 2 control case (CA-0.25): Temporal evolution of the vertical profile of temperature for the OCN box (top panel), the NCV box (second panel), NCV minus OCN (third panel); and time series of the NCV minus OCN pressure at 110 m ASL (bottom panel).  White areas indicate times when the lowest $\sigma$ model level was higher than 30 m ASL for the NCV box.}
 \label{fig:windSol_TimeHeightCtrl}
-\end{figure}
+\end{FPfigure}
+%\end{figure}
 
 The diurnal variations in low-level pressure correspond to diurnal variations in boundary layer temperature, because pressure is the vertical integral of the weight of the air column above a point, and changes in temperature change the density and thus the weight of the air column.  As expected from the differences in specific heat, diurnal temperature variations are larger in the Central Valley than over the ocean (Figure \ref{fig:windSol_TimeHeightCtrl}).  In the NCV box, the temperature near the surface (\textless 100 m ASL) declines quickly after sunset, but the temperature aloft in the boundary layer (particularly 300-700 m) remains elevated until at least midnight (Figure \ref{fig:windSol_TimeHeightCtrl}, panel 2).  This is because advection of cool oceanic air is concentrated at low levels where the wind speed is maximum, and advection is weaker above $\sim$300 m.  In the time period of these experiments (June/July), both the NCV temperature and the NCV-OCN temperature difference peak around 17:00.  The temperature difference at low levels (\textless 110 m) drops after sunset and approaches zero in the early morning some days, but the temperature difference remains positive at 110-490 m on most days, with NCV warmer than OCN by up to 12 deg C even in the early morning.  The near-surface cooling in the Central Valley is due to a combination of radiative cooling of the land surface and advection of cooler marine air by the low-level wind maximum.  The pressure difference is most negative (strongest gradient) at the same time as the maximum temperature difference, around 17:00 PST, and is smallest in magnitude (weakest gradient) just before sunrise, around 06:00, when the NCV boundary layer is coolest.  
 
-\begin{figure}[here]
-\includegraphics[width=0.9\textwidth]{ch3-wind/img/timeheight_T_pdiff_ocnbox_ncvbox_diff_dryCV.png}
+%\begin{figure}[here]
+\begin{FPfigure}
+\includegraphics[width=0.9\textwidth]{ch3-wind/img/timeheight_T_pdiff_OCN_NCV_diff_dryCV.png}
 \caption{Experiment 2 dryCV test case: Temporal evolution of the vertical profile of $\Delta T$ (test-minus-control temperature) for the OCN box (top panel), the NCV box (second panel), $\Delta T_{NCV} - \Delta T_{OCN}$ (third panel); and time series of $\Delta p_{NCV} - \Delta p_{OCN}$ at 110 m ASL (bottom panel).  White areas indicate times when the lowest $\sigma$ model level was higher than 30 m ASL for the NCV box.}
 \label{fig:windSol_TimeHeightDryCV}
-\end{figure}
+\end{FPfigure}
+%\end{figure}
 
 Changes in soil moisture affect the pressure gradient by changing surface heat fluxes and thus air temperature.  Temperature changes in the lower 1000 m of the NCV box are much larger in the dryCV case (Figure \ref{fig:windSol_TimeHeightDryCV}) than in the dryCR or drySN cases (not shown).  We note that in the dryCR and drySN cases, temperature and pressure changes are much smaller (+/- 1 degree C and -0.4 hPa), and the pressure gradient strengthens in the late afternoon, largely corresponding to warming at boundary layer levels above the surface (150 m to 1200 m).
 
@@ -267,7 +277,7 @@ In the dryCV case, the NCV box experiences strong low-level heating beginning in
 
 The momentum advection, pressure gradient, and $u$ time tendency terms in Equation \ref{eqn:windSol_momentum} are estimated from model output for the experiment 2 control (CA-0.25; Figure \ref{fig:windSol_MomTermsDiurn}).  The pressure gradient contribution to the momentum budget is always positive; it increases through the daytime, peaks around 16:00 local time, and declines through the night.  The horizontal advection of momentum almost always contributes negatively to the momentum budget, because advection of slower upstream air from the San Francisco Bay decreases the momentum at the Solano pass.  The advection term is most negative at night, when the wind at Solano is fastest and the wind gradient between Solano and the San Francisco bay is large. The time tendency ($\frac{\partial u}{\partial t}$) term is much smaller than the pressure gradient term, even in the afternoon when the pressure gradient is largest and negative advection of momentum is small.
 
-Using these three model-derived terms (pressure gradient, advection, and time tendency), we calculate the residual of the momentum budget (Figure  4.20, cyan line), which in Equation \ref{eqn:windSol_momentum} is attributed to the frictional dissipation term, $F\left(\frac{\partial u}{\partial z}, N\right)$. The residual is almost always a negative contribution to the momentum budget, especially during the day.  Moreover, the residual term is not in phase with wind speed, but has the expected diurnal shape of boundary layer turbulence: the residual has large negative values in the daytime when convective turbulence increases eddy viscosity and closely couples winds in the middle and upper boundary layer with the surface momentum sink; and near-zero values at night when thermal stabilization reduces convective turbulence and buffers the middle and upper residual boundary layer from friction with the surface.  We thus speculate that the residual consists largely of the drag from daytime convective turbulence.  [CITE LLJ PAPER; UPDATE MECHANISM EXPLANATION AFTER READING PIELKE PAPER]  
+Using these three model-derived terms (pressure gradient, advection, and time tendency), we calculate the residual of the momentum budget (Figure  4.20, cyan line), which in Equation \ref{eqn:windSol_momentum} is attributed to the frictional dissipation term, $F\left(\frac{\partial u}{\partial z}, N\right)$. The residual is almost always a negative contribution to the momentum budget, especially during the day.  Moreover, the residual term is not in phase with wind speed, but has the expected diurnal shape of boundary layer turbulence: the residual has large negative values in the daytime when convective turbulence increases eddy viscosity and closely couples winds in the middle and upper boundary layer with the surface momentum sink; and near-zero values at night when thermal stabilization reduces convective turbulence and buffers the middle and upper residual boundary layer from friction with the surface.  We thus speculate that the residual consists largely of the drag from daytime convective turbulence.
 
 This turbulent resistance residual is of comparable magnitude to the pressure gradient and advection terms, and as such is very important for determining the magnitude and phase of the diurnal wind cycle.  In the afternoon in the experiment 2 control case (CA-0.25), the pressure gradient term is large and positive and the negative momentum advection is small.  If the residual term (interpreted as convective turbulent drag) were not also large and negative at this time, the wind would accelerate much faster than is actually observed.  Conversely, high wind speeds persist even after the pressure gradient declines between 22:00 and 04:00 local time and despite the strong advection of lower momentum air.  If the residual term during the night remained at its large negative afternoon  values, the winds would decelerate at night, rather than maintaining high speed as observed.  The decline in magnitude of the turbulent drag term at night is necessary in order to explain the observed high winds at night.
 
