--- a/thesis.tex
+++ b/thesis.tex
@@ -46,6 +46,7 @@
 
 \usepackage{caption}
 \usepackage{subcaption}
+\usepackage[CaptionAfterwards]{fltpage}
 \DeclareMathOperator*{\argmin}{argmin}
 \PassOptionsToPackage{hyphens}{url}\usepackage{hyperref}
 
@@ -100,8 +101,9 @@ This dissertation was typeset using the
 \linespread{1.6}\selectfont
 
 %\include{ch0-introduction/document}
-%\include{ch1-sapflow/document}
+\include{ch1-sapflow/document}
 %\include{ch2-BL/document}
 \include{ch3-wind/document}
+
 \bibliography{thesis}{}
 \end{document}
