citations and small edits

--- a/thesis.bib
+++ b/thesis.bib
@@ -1,16 +1,295 @@
-@phdthesis{williams12,
-  school = {University of California, Berkeley},
-  author = {{Williams}, Peter},
-  title = {Exploring the Dynamic Radio Sky with the Allen Telescope Array},
-  year = {2012}
-}
+%%%%%%%% WIND CHAPTER %%%%%%%%
 
+@article{avissar1998evaluation,
+	Author = {Avissar, R and Schmidt, T},
+	Journal = {Journal of the Atmospheric Sciences},
+	Number = {16},
+	Pages = {2666--2689},
+	Title = {An evaluation of the scale at which ground-surface heat flux patchiness affects the convective boundary layer using large-eddy simulations},
+	Volume = {55},
+	Year = {1998}}
+
+@article{bedard2013development,
+	Author = {B{\'e}dard, J and Yu, W and Gagnon, Y and Masson, C},
+	Journal = {Wind Energy},
+	Number = {8},
+	Pages = {1131--1147},
+	Publisher = {Wiley Online Library},
+	Title = {Development of a geophysic model output statistics module for improving short-term numerical wind predictions over complex sites},
+	Volume = {16},
+	Year = {2013}}
+
+@article{carcangiu2013wind,
+	Author = {Carcangiu, CE and Pujana-Arrese, A and Mendizabal, A and Pineda, I and Landaluze, J},
+	Journal = {Wind Energy},
+	Publisher = {Wiley Online Library},
+	Title = {Wind gust detection and load mitigation using artificial neural networks assisted control},
+	Year = {2013}}
+
+@article{carvalho2012sensitivity,
+	Author = {Carvalho, D and Rocha, A and G{\'o}mez-Gesteira, M and Santos, C},
+	Journal = {Environmental Modelling \& Software},
+	Pages = {23--34},
+	Publisher = {Elsevier},
+	Title = {A sensitivity study of the {WRF} model in wind simulation for an area of high wind energy},
+	Volume = {33},
+	Year = {2012}}
+
+@article{chen1994impact,
+	Author = {Chen, F and Avissar, R},
+	Issn = {0894-8763},
+	Journal = {Journal of Applied Meteorology},
+	Number = {12},
+	Pages = {1382--1401},
+	Publisher = {American Meteorological Society},
+	Title = {Impact of land-surface moisture variability on local shallow convective cumulus and precipitation in large-scale models},
+	Volume = {33},
+	Year = {1994}}
+
+@article{deppe2013wrf,
+	Author = {Deppe, AJ and Gallus Jr, WA and Takle, ES},
+	Journal = {Weather and Forecasting},
+	Number = {1},
+	Pages = {212--228},
+	Title = {A {WRF} ensemble for improved wind speed forecasts at turbine height},
+	Volume = {28},
+	Year = {2013}}
+
+@article{draxl2014evaluating,
+	Author = {Draxl, C and Hahmann, AN and Pe{\~n}a, A and Giebel, G},
+	Journal = {Wind Energy},
+	Number = {1},
+	Pages = {39--55},
+	Publisher = {Wiley Online Library},
+	Title = {Evaluating winds and vertical wind shear from {Weather Research and Forecasting} model forecasts using seven planetary boundary layer schemes},
+	Volume = {17},
+	Year = {2014}}
+
+@techreport{eia2014,
+	Author = { {EIA} },
+	Institution = {U.S. Energy Information Administration},
+	Title = { {Electric Power Monthly} with data for {July} 2014},
+	Year = {2014},
+	note = {\url{http://www.eia.gov/electricity/monthly/current_year/september2014.pdf}}}
+
+@article{eidenshink19941,
+	Author = {Eidenshink, JC and Faundeen, JL},
+	Journal = {International Journal of Remote Sensing},
+	Number = {17},
+	Pages = {3443--3462},
+	Publisher = {Taylor \& Francis},
+	Title = {The 1 km {AVHRR} global land data set: first stages in implementation},
+	Volume = {15},
+	Year = {1994}}
+
+@article{ellis2014predicting,
+	Author = {Ellis, N and Davy, R and Troccoli, A},
+	Journal = {Wind Energy},
+	Publisher = {Wiley Online Library},
+	Title = {Predicting wind power variability events using different statistical methods driven by regional atmospheric model output},
+	Year = {2014}}
+
+@article{fabbri2005assessment,
+	Author = {Fabbri, A and San Roman, TG and Abbad, JR and Quezada, VHM},
+	Journal = {Power Systems, IEEE Transactions on},
+	Number = {3},
+	Pages = {1440--1446},
+	Publisher = {IEEE},
+	Title = {Assessment of the cost associated with wind generation prediction errors in a liberalized electricity market},
+	Volume = {20},
+	Year = {2005}}
+
+@article{foley2012current,
+	Author = {Foley, Aoife M and Leahy, Paul G and Marvuglia, Antonino and McKeogh, Eamon J},
+	Journal = {Renewable Energy},
+	Number = {1},
+	Pages = {1--8},
+	Publisher = {Elsevier},
+	Title = {Current methods and advances in forecasting of wind power generation},
+	Volume = {37},
+	Year = {2012}}
+
+@techreport{energy2010western,
+	Author = { {GE Energy} },
+	Institution = {prepared for the National Renewable Energy Laboratory},
+	Title = {Western wind and solar integration study},
+	Number = {NREL/SR-550-47434},
+	Year = {2010}}
+
+@article{godfrey2008soil,
+	Author = {Godfrey, CM and Stensrud, DJ},
+	Journal = {Journal of Hydrometeorology},
+	Number = {3},
+	Pages = {367--387},
+	Title = {Soil temperature and moisture errors in operational {Eta Model} analyses},
+	Volume = {9},
+	Year = {2008}}
+
+@article{jacobson2011providing,
+	Author = {Jacobson, MZ and Delucchi, MA},
+	Journal = {Energy Policy},
+	Number = {3},
+	Pages = {1154--1169},
+	Publisher = {Elsevier},
+	Title = {Providing all global energy with wind, water, and solar power, Part {I}: Technologies, energy resources, quantities and areas of infrastructure, and materials},
+	Volume = {39},
+	Year = {2011}}
+
+@article{kusiak2009wind,
+	Author = {Kusiak, A and Zheng, H and Song, Z},
+	Journal = {Wind Energy},
+	Number = {3},
+	Pages = {275--293},
+	Publisher = {Wiley Online Library},
+	Title = {Wind farm power prediction: a data-mining approach},
+	Volume = {12},
+	Year = {2009}}
+
+@phdthesis{mansbach2010synoptic,
+	Author = {Mansbach, DK},
+	Title = {Synoptic and local influences on boundary layer processes, with an application to {California} wind power},
+	School = {University of California, San Diego},
+	Year = {2010}}
+
+@article{marjanovic2014,
+	Author = {Marjanovic, N and Wharton, S and Chow, F.K.},
+	Journal = {Journal of Wind Engineering and Industrial Aerodynamics},
+	Volume = {134},
+	Pages = {10--24},
+	Title = {Investigation of model parameters for high-resolution wind energy forecasting: case studies over simple and complex terrain},
+	Year = {2014}}
+
+@article{marshall2003impact,
+	Author = {Marshall, CH and Crawford, KC and Mitchell, KE and Stensrud, DJ},
+	Journal = {Weather and Forecasting},
+	Number = {5},
+	Pages = {748--768},
+	Title = {The impact of the land surface physics in the operational {NCEP Eta} model on simulating the diurnal cycle: Evaluation and testing using {Oklahoma Mesonet} data},
+	Volume = {18},
+	Year = {2003}}
+
+@article{miller2003sea,
+	Author = {Miller, STK and Keim, BD and Talbot, RW and Mao, H},
+	Journal = {Reviews of geophysics},
+	Number = {3},
+	Publisher = {Wiley Online Library},
+	Title = {Sea breeze: Structure, forecasting, and impacts},
+	Volume = {41},
+	Year = {2003}}
+
+@article{miller1998conterminous,
+	Author = {Miller, DA and White, RA},
+	Journal = {Earth Interactions},
+	Number = {2},
+	Pages = {1--26},
+	Title = {A conterminous {United States} multilayer soil characteristics dataset for regional climate and hydrology modeling},
+	Volume = {2},
+	Year = {1998}}
+
+@techreport{monteiro2009wind,
+	Author = {Monteiro, C and Bessa, R and Miranda, V and Botterud, A and Wang, J and Conzelmann, G and others},
+	Institution = {U.S. Department of Energy, Argonne National Laboratory},
+	Title = {Wind power forecasting: State-of-the-art 2009.},
+	Year = {2009}}
+
+@techreport{ncep,
+	Author = {NCEP},
+	Institution = {National Centers for Environmental Prediction/National Weather Service/NOAA/U.S. Department of Commerce},
+	Year = {1998},
+	Title = { {GCIP NCEP Eta} model output, {Research Data Archive at the National Center for Atmospheric Research, Computational and Information Systems Laboratory, Boulder, Colo.} (Updated monthly.)},
+	Note = {http://rda.ucar.edu/datasets/ds609.2/, Accessed 9 Aug 2014.}}
+
+@article{ortiz2011short,
+	Author = {Ortiz-Garc{\'\i}a, EG and Salcedo-Sanz, S and P{\'e}rez-Bellido, {\'A}M and Gasc{\'o}n-Moreno, J and Portilla-Figueras, JA and Prieto, L},
+	Journal = {Wind Energy},
+	Number = {2},
+	Pages = {193--207},
+	Publisher = {Wiley Online Library},
+	Title = {Short-term wind speed prediction in wind farms based on banks of support vector machines},
+	Volume = {14},
+	Year = {2011}}
+
+@article{physick1980numerical,
+	Author = {Physick, WL},
+	Journal = {Quarterly Journal of the Royal Meteorological Society},
+	Number = {450},
+	Pages = {735--746},
+	Publisher = {Wiley Online Library},
+	Title = {Numerical experiments on the inland penetration of the sea breeze},
+	Volume = {106},
+	Year = {1980}}
+
+@article{pinson2009ensemble,
+	Author = {Pinson, P and Madsen, H},
+	Journal = {Wind Energy},
+	Number = {2},
+	Pages = {137--155},
+	Publisher = {Wiley Online Library},
+	Title = {Ensemble-based probabilistic forecasting at {Horns Rev} },
+	Volume = {12},
+	Year = {2009}}
+
+@article{pleim2007combined,
+	Author = {Pleim, JE},
+	Journal = {Journal of Applied Meteorology and Climatology},
+	Number = {9},
+	Pages = {1383--1395},
+	Title = {A combined local and nonlocal closure model for the atmospheric boundary layer. Part {I}: Model description and testing},
+	Volume = {46},
+	Year = {2007}}
+
+@techreport{porter2010status,
+	Author = {Porter, K and Rogers, J},
+	Institution = {National Renewable Energy Laboratory},
+	Title = {Status of centralized wind power forecasting in {North America} },
+	Year = {2010},
+	Number = {NREL/SR-550-47853}}
+
+@article{ranaboldo2013implementation,
+	Author = {Ranaboldo, M and Giebel, G and Codina, B},
+	Journal = {Wind Energy},
+	Number = {6},
+	Pages = {811--826},
+	Publisher = {Wiley Online Library},
+	Title = {Implementation of a {Model Output Statistics} based on meteorological variable screening for short-term wind power forecast},
+	Volume = {16},
+	Year = {2013}}
+
+@techreport{skamarock2008,
+	Author = {Skamarock, WC and Klemp, JB and Dudhia, J and Gill, DO and Barker, DM and Duda, MG and Huang, X-Y and Wang, W and Powers, JG},
+	Institution = {National Center for Atmospheric Research},
+	Number = {NCAR/{TN-475}+STR},
+	Title = {A description of the advanced research {WRF} version 3},
+	Year = {2008}}
+
+@book{stocker2013ipcc,
+	Author = {Stocker, TF and Qin, D and Plattner, GK and Tignor, M and Allen, SK and Boschung, J and Nauels, A and Xia, Y and Bex, B and Midgley, BM},
+	Publisher = {Cambridge University Press},
+	Title = {IPCC, 2013: Climate change 2013: The physical science basis. Contribution of working group I to the Fifth Assessment Report of the Intergovernmental Panel on Climate Change},
+	Year = {2013}}
+
+@techreport{wharton2011review,
+	Author = {Wharton, S and Lundquist, JK and Marjanovic, N and Williams, JL and Rhodes, M and Chow, TK and Maxwell, R},
+	Institution = {U.S. Department of Energy, Lawrence Livermore National Laboratory},
+	Title = {Review of Wind Energy Forecasting Methods for Modeling Ramping Events},
+	Year = {2011}}
+
+@article{wharton2012atmospheric,
+	Author = {Wharton, S and Lundquist, JK},
+	Journal = {Environmental Research Letters},
+	Number = {1},
+	Pages = {014005},
+	Publisher = {IOP Publishing},
+	Title = {Atmospheric stability affects wind turbine power collection},
+	Volume = {7},
+	Year = {2012}}
 
 @article{zhong2004diurnal,
 	Author = {Zhong, Shiyuan and Whiteman, C David and Bian, Xindi},
 	Journal = {Journal of Applied Meteorology},
 	Number = {11},
 	Pages = {1679--1699},
-	Title = {Diurnal evolution of three-dimensional wind and temperature structure in California's Central Valley},
+	Title = {Diurnal evolution of three-dimensional wind and temperature structure in {California's Central Valley} },
 	Volume = {43},
 	Year = {2004}}
+
