--- a/ch3-wind/tex/discussion/discussion.tex
+++ b/ch3-wind/tex/discussion/discussion.tex
@@ -2,18 +2,24 @@
 
 \section{Discussion and Conclusions}
 
-Wind speed at the Solano Wind Project wind farm is sensitive to regional soil moisture, especially in the Central Valley.  Drier Central Valley soil moisture increases Solano turbine-level wind by up to 3 m/s, and wetter Central Valley soil decreases Solano turbine-level wind by a similar amount.  Such changes in speed translate to large changes in power: a moderate speed increase of 1 m/s from 6 m/s to 7 m/s (in the most sensitive range of the wind-power curve) equates to an increase from 15\% of a turbine's maximum power at 6 m/s to 30\% of maximum power at 7 m/s. A larger speed increase of 3 m/s, from 6 m/s to 9 m/s, equates to a power increase from 15\% of maximum to 55\% of maximum.  The changes are largest in the late morning to late afternoon, with average increases of $\sim$1.5 m/s in the late afternoon when Central Valley soil moisture is reduced from 0.25 m$^3$/m$^3$ to 0.1 m$^3$/m$^3$.  Notably, these midday changes in wind speed coincide with the approximate timing of the daily wind ramp-up; thus, wind changes due to soil moisture errors are likely to shift the predicted timing of the ramp-up.
+Three sets of experiments were conducted to test the sensitivity of Solano Wind Project wind speed to regional soil moisture variations.  In all three experiments, the control soil moisture was set to a constant value throughout the domain (0.1 m$^3$/m$^3$ in experiment 1, 0.25 m$^3$/m$^3$ in experiment 2, and 0.2 m$^3$/m$^3$ in experiment 3).  In experiments 1 and 2, the regional sensitivity was tested by separately perturbing the soil moisture of the Coast Range, Central Valley, and Sierra Nevada regions.  In experiment 3, the scaling of wind changes with incremental changes in Central Valley soil moisture was quantified.
+
+Wind speed at the Solano Wind Project wind farm is sensitive to regional soil moisture, especially in the Central Valley.  In the driest Central Valley case (CV0.05), wind speed is up to nearly 3 m/s faster, and on average 1 m/s faster in the afternoon, than in a moderately wet Central Valley case (CV0.2).  The changes are largest in the late morning to late afternoon, notably coinciding with the approximate timing of the daily wind ramp-up; thus, soil moisture errors are likely to shift the predicted timing of the ramp-up at this site.  
+
+Such changes in speed translate to large changes in power: a moderate speed increase of 1 m/s from 6 m/s to 7 m/s (in the most sensitive range of the wind-power curve) equates to an increase from 15\% of a turbine's maximum power at 6 m/s to 30\% of maximum power at 7 m/s. A larger speed increase of 3 m/s, from 6 m/s to 9 m/s, equates to a power increase from 15\% of maximum to 55\% of maximum [\textit{e.g.} Figure 4 in \cite{wharton2012atmospheric}].  Moreover, the soil moisture errors tested in this study are realistic: soil moisture derived from NWP forecasts is known to have biases up to 0.1-0.15 m$^3$/m$^3$ [\cite{marshall2003impact}; \cite{godfrey2008soil}].  The present study shows that soil moisture errors of this magnitude can significantly affect wind energy forecasts.
 
 Understanding the mechanism behind the soil moisture effect lends credence to the reality of this influence in the real world, not just in the model, and helps us anticipate other wind farm locations that might be similarly influenced by soil moisture.  Soil moisture affects Solano wind by controlling land surface heating and thus influencing air temperature through the boundary layer.  Changes in air temperature affect the near-surface pressure gradient that drives the Solano wind.  Solano wind is most sensitive to pressure over the central coastal ocean and in the Central Valley.  Soil moisture in the Central Valley influences Solano wind more strongly than does soil moisture in the Coast Range or in the Sierra Nevada because the Central Valley soil moisture more directly controls the air temperature in the Central Valley regions relevant to the driving pressure gradient.  The changes in pressure gradient and wind are concentrated in the late morning to late afternoon because the changes in land-surface heating and boundary layer air temperature are greatest at these times.  Nevertheless, in the case of a dry Central Valley, the air temperature, pressure gradient, and wind speeds remain slightly elevated even at night.  The marked increases in the pressure gradient are partially offset by negative changes in momentum advection (due to faster transport of lower-momentum air) and friction (due to increased convection), which limit the acceleration of the winds.
 
-This study is a prototype, and several caveats and uncertainties bear mentioning.  First, a more complete analysis should run the model for a longer time period covering more synoptic, and ideally more seasonal, conditions.  Also, running ensembles with perturbed forcing, to characterize uncertainty due to lateral forcing and model advection, would test the robustness of the results.  The specific results are probably sensitive to PBL scheme and model resolution to some degree.  However, the differences due to the PBL scheme are probably a matter of degree rather than of the sign of the changes, since PBL schemes most directly affect vertical mixing and only indirectly affect lateral transport, which is most relevant to the horizontal pressure gradients controlling wind changes here.  Additionally, we have followed guidelines from previous literature regarding PBL schemes and grid resolution that give good simulation accuracy [Marjanovic \textit{et al.}, 2014; XX].  However, these model parameters and others would need to be chosen carefully to give best performance at a specific site [Wharton \textit{et al.} 2011].
+This study is a prototype, and several caveats and uncertainties bear mentioning.  First, a more complete analysis should include longer model runs covering more synoptic, and ideally more seasonal, conditions.  Also, model ensembles with perturbed forcing should be run to characterize uncertainty due to lateral forcing and model advection.  The specific results are probably sensitive to PBL scheme and model resolution to some degree.  However, the differences due to the PBL scheme are probably a matter of degree rather than of the sign of the changes, since PBL schemes most directly affect vertical mixing and only indirectly affect lateral transport, which is most relevant to the horizontal pressure gradients controlling wind changes here.  Additionally, we have followed guidelines from previous literature regarding PBL schemes and grid resolution that give good simulation accuracy [Marjanovic \textit{et al.}, 2014; XX].  However, these model parameters and others need to be chosen carefully to give best performance at a specific site [Wharton \textit{et al.} 2011].
 
-There are also uncertainties related to the model representation of land surface heat and moisture fluxes.  We expect the effect of letting soil moisture evolve over the day, rather than holding it fixed at every timestep, to be small, because the changes in soil moisture are small (Figure \ref{fig:windSol_forcings}); moreover, allowing soil moisture to evolve dynamically is comparable to initializing a day-ahead forecast with erroneous soil moisture, in which case soil moisture would also evolve over the day.  The results probably depend strongly on model land use and land cover, which determine albedo, plant transpiration dynamics, and roughness; the results would have been different if we had modified the land use distribution.  Similarly, the results depend on the accuracy of the Noah LSM land cover and soil hydrology parameterizations; Chapter \ref{c.sapflow} of this dissertation illustrates that the different stomatal dynamics of different plant species can change boundary layer air temperature, which the present chapter shows is an important control on the pressure gradients driving near-surface winds.
+The model representation of land surface heat and moisture fluxes also contains uncertainties.  We expect the effect of letting soil moisture evolve over the day, rather than holding it fixed at every timestep, to be small, because the changes in soil moisture are small (Figure \ref{fig:windSol_forcings}); moreover, allowing soil moisture to evolve dynamically is comparable to initializing a day-ahead forecast with erroneous soil moisture, in which case soil moisture would also evolve over the day.  The results probably depend strongly on model land use and land cover, which determine albedo, plant transpiration dynamics, and roughness.  Similarly, the results depend on the accuracy of the Noah LSM land cover and soil hydrology parameterizations; Chapter \ref{c.sapflow} of this dissertation illustrates that differences in stomatal dynamics among plant species can change boundary layer air temperature, which the present chapter shows is an important control on the pressure gradients driving near-surface winds.
 
-The model is an imperfect representation of the world; it captures many of the important processes, but we do not contend that it represents land surface fluxes perfectly.  In this study, we have sought both to investigate the real-world physical sensitivity of the winds to soil moisture, to the degree possible given the model errors, and also to characterize the sensitivity within the model itself.  Even if the internal model sensitivity is not fully realistic, this tool is in common usage in wind energy forecasting, and thus it is important to understand the sensitivity of the tool to the inputs.
+%The model is an imperfect representation of the world; it captures many of the important processes, but we do not contend that it represents land surface fluxes perfectly.  In this study, we have sought both to investigate the real-world physical sensitivity of the winds to soil moisture, to the degree possible given the model errors, and also to characterize the sensitivity within the model itself.  Even if the internal model sensitivity is not fully realistic, this tool is in common usage in wind energy forecasting, and thus it is important to understand the sensitivity of the tool to the inputs.
 
-Soil moisture in California varies both because of interannual variability in precipitation, causing anomalously wet or dry soils in the unmanaged mountain regions, and because of large-scale irrigation in the Central Valley.  The area represented by the ``CV'' region in this study is certainly larger than the irrigated agricultural land area, and as such, the sensitivity of Solano winds to actual irrigation will be lower.  However, these results show that correct estimation of soil moisture in both the agricultural and non-agricultural areas of the Central Valley is important for accurate Solano wind forecasts.  More broadly, these results illustrate the sensitivity of winds in this NWP model, WRF, to soil moisture; because NWP models are widely used in wind energy forecasting, the accuracy of soil moisture input information is necessary for accurate energy resource forecasts, at least at sites like Solano.  The effect of soil moisture is expected to be strongest when local and regional land surface heating drives winds, i.e. during the warm season with weak to moderate synoptic winds.  In California, these conditions overlap with the season of greatest wind energy production, making soil moisture an important variable in wind energy forecasts.  We also note that, while Solano winds are not strongly sensitive to Coast Range or Sierra Nevada soil moisture, other potential wind farm locations are strongly affected, including the northern and southern Central Valley (cf. Figure \ref{fig:windSol_WindMapsRg}); future development of wind farms in these locations would benefit from measurements to constrain land surface energy fluxes in the Coast Range and Sierra Nevada.
+Soil moisture in California varies both because of interannual variability in precipitation, causing anomalously wet or dry soils in the unmanaged mountain regions, and because of large-scale irrigation in the Central Valley.  The area represented by the ``CV'' region in this study is certainly larger than the irrigated agricultural land area, and as such, the sensitivity of Solano winds to actual irrigation will be lower than the sensitivity to soil moisture changes throughout the ``CV'' region.  However, these results show that correct estimation of soil moisture in both the agricultural and non-agricultural areas of the Central Valley is important for accurate Solano wind forecasts.  
 
-Studies of wind energy sensitivity to regional soil moisture can help constrain which measurements might improve wind energy forecasts.  Soil moisture itself is difficult to measure at large scales and at the necessary depth [Seneviratne \textit{et al.}, 2010], and small-scale heterogeneity complicates the scaling-up of point measurements.  As such, it may be more feasible and productive to measure a related observable variable, such as land surface temperature (detected remotely from towers or aircraft using thermal imaging) or even the near-surface air pressure difference between the NCV region and the central coast, as proxies for soil moisture and the related land-surface heating.  These measurements could be assimilated into NWP models using land data assimilation frameworks [e.g. Rodell \textit{et al.}, 2004; Drusch, 2007], or they could be integrated into statistical or machine-learning post-processing of NWP model output.  Conducting model sensitivity studies such as this one could help constrain the regions to which the wind forecast at a given site is most sensitive and thus the regions with the greatest potential return on investment in measurement efforts.
+More broadly, these results illustrate the sensitivity of winds in this NWP model, WRF, to soil moisture; because NWP models are widely used in wind energy forecasting, the accuracy of soil moisture input information is necessary for accurate energy resource forecasts, at least at sites like Solano.  The effect of soil moisture is expected to be strongest during seasons when local and regional land surface heating drives winds, especially during the warm season with weak to moderate synoptic winds.  In California, these conditions overlap with the season of greatest wind energy production, making soil moisture an important variable in wind energy forecasts.  We also note that, while Solano winds are not strongly sensitive to Coast Range or Sierra Nevada soil moisture, other potential wind farm locations are strongly affected, including the northern and southern Central Valley (cf. Figure \ref{fig:windSol_WindMapsRg}); future development of wind farms in these locations would benefit from measurements to constrain land surface energy fluxes in the Coast Range and Sierra Nevada.
+
+Studies of wind energy sensitivity to regional soil moisture can point to measurements that might improve wind energy forecasts.  Soil moisture itself is difficult to measure at large scales and at the relevant depth [Seneviratne \textit{et al.}, 2010], and small-scale heterogeneity complicates the scaling-up of point measurements.  As such, it may be more feasible and productive to measure a related observable variable, such as land surface temperature (detected remotely from towers or aircraft using thermal imaging) or even the near-surface air pressure difference between the NCV region and the central coast, as proxies for soil moisture and the related land-surface heating.  These measurements could be assimilated into NWP models using land data assimilation frameworks [e.g. Rodell \textit{et al.}, 2004; Drusch, 2007], or they could be integrated into statistical post-processing of NWP model output.  Conducting model sensitivity studies such as this one could help constrain the regions to which the wind forecast at a given site is most sensitive and thus the regions with the greatest potential return on investment in measurement efforts.
 
 %\textit{Close with something here: refer back to motivation of wind variability and utility-scale integration.  Better day-ahead to hour-ahead forecasts could reduce costs, and at many wind farm locations with a land-surface-heating component to driving the wind, improvements in soil moisture input information could help increase the accuracy of those forecasts.  Help utilities manage the variability of wind energy cost-effectively and decrease the cost of wind energy.}
