--- a/ch3-wind/tex/methods/methods.tex
+++ b/ch3-wind/tex/methods/methods.tex
@@ -20,11 +20,11 @@
 
 \section{Methods}
 
-The sensitivity of Solano wind forecasts to soil moisture is tested using numerical experiments with a regional atmospheric model, the Weather Research and Forecasting (WRF) model.  The WRF model, described in Section \ref{sec:BL_WRFdesc} and in detail in Skamarock et al. [2008], is a three-dimensional, non-hydrostatic regional atmospheric model with terrain-following vertical coordinates. WRF has been used extensively in wind energy forecasting [CITATIONS Marjanovic, Wharton, Carvalho], with generally good performance [CITATIONS, METRIC].  Accuracy of WRF-forecasted turbine-level winds depends on \textit{(resolution - especially in complex topography [Marjanovic, Carvalho], PBL scheme, lateral forcing, soil moisture **)} [CITATIONS].
+The sensitivity of Solano wind forecasts to soil moisture is tested using numerical experiments with a regional atmospheric model, the Weather Research and Forecasting (WRF) model.  The WRF model, described in Section \ref{sec:BL_WRFdesc} and in detail in \cite{skamarock2008}, is a three-dimensional, non-hydrostatic regional atmospheric model with terrain-following vertical coordinates. WRF has been used extensively in wind energy forecasting [\cite{marjanovic2014}, \cite{wharton2011review}, \cite{carvalho2012sensitivity}, \cite{deppe2013wrf}, \cite{foley2012current}].
 
 \subsection{Model setup}
 
-We run WRF with two nested domains centered on the Solano wind farm (Figure \ref{fig:windSol_domainmap}); the domains are described in Table \ref{table:windSol_domains}.  As in Chapter XX, the outer grid forces the lateral boundaries of the inner grid, and the inner grid feeds back to the outer grid across the region where the two domains overlap [Skamarock et al., 2008].  The outer and inner domain are Arakawa-C grids with horizontal resolution of 8.1 km and 2.7 km, respectively; preliminary tests with a third finer grid (0.9 km) showed little change in the forecasted winds, similar to the results of Marjanovic \textit{et al.} [2014], who found little accuracy improvement with horizontal resolution below 2.7 km in their simple terrain case.  The domain has 45 vertical levels, with a minimum spacing of $\sim$30 m near the surface and increasing with height, interpolated quadratically by the log of pressure (the default WRF setting); turbine-level (60-100 m) wind forecasts are not very sensitive to vertical resolution beyond about 40 levels with this vertical interpolation scheme in WRF [Marjanovic \textit{et al.}, 2014, and references therein].
+We run WRF with two nested domains centered on the Solano wind farm (Figure \ref{fig:windSol_domainmap}); the domains are described in Table \ref{table:windSol_domains}.  As in Chapter \ref{c.BL}, the outer grid forces the lateral boundaries of the inner grid, and the inner grid feeds back to the outer grid across the region where the two domains overlap [\cite{skamarock2008}].  The outer and inner domain are Arakawa-C grids with horizontal resolution of 8.1 km and 2.7 km, respectively; preliminary tests with a third finer grid (0.9 km) showed little change in the forecasted winds, echoing the results of \cite{marjanovic2014}, who found little accuracy improvement with horizontal resolution below 2.7 km in their simple terrain case.  The domain has 45 vertical levels, with a minimum spacing of $\sim$30 m near the surface and increasing with height, interpolated quadratically by the log of pressure (the default WRF setting); turbine-level (60-100 m) wind forecasts are not very sensitive to vertical resolution beyond about 40 levels with this vertical interpolation scheme in WRF [\cite{marjanovic2014}, and references therein].
 
 \begin{figure}[here]
 \includegraphics[width=1\textwidth]{ch3-wind/img/domain_map_cropped.pdf}
@@ -44,15 +44,21 @@ d02 & 2.7 & 2.7 & 175 & 175 & 45 & 15 & 2 min\\
 \label{table:windSol_domains}
 \end{table}
 
-In WRF, the atmospheric model is coupled to the Noah land surface model with USGS land use and soil classifications [Skamarock \textit{et al.}, 2008].  The observed distributions of land use and soil types are used [Eidenshink and Faundeen, 1994; Miller and White, 1998], as are the default vegetation water-use parameters for each land use type, in order to simulate as closely as possible the real present day sensitivity of Solano winds to soil moisture.  Uncertainties associated with errors in the model representation of water movement in the subsurface and plant water use are addressed in the Discussion. 
+In WRF, the atmospheric model is coupled to the Noah land surface model with 24-category USGS land use and 16-category soil classifications [\cite{skamarock2008}].  The observed distributions of land use and soil types are used [\cite{eidenshink19941}; \cite{miller1998conterminous}], as are the default vegetation water-use parameters for each land use type [\cite{skamarock2008}], in order to simulate as closely as possible the real present day sensitivity of Solano winds to soil moisture.  Uncertainties associated with errors in the model representation of water movement in the subsurface and plant water use are addressed in the Discussion. 
 
-As in Chapter XX, the ACM2 PBL scheme is used, following the recommendations of Marjanovic \textit{et al.} [2014] for a locally forced simple terrain case in California; this PBL scheme includes both local (small-scale turbulent) and nonlocal (large convective plume) vertical transport, and can thus simulate both stable and unstable conditions [Pleim, \textit{2007}] A LITTLE MORE DETAIL ABOUT THE PHYSICS.  The model is forced at the lateral boundaries with NCEP Eta 212 grid (40 km) operational analysis [NCEP, 1998].  Other parameterization schemes and settings are the same as those in Chapter XX Table XX.  Model variables are output every 30 minutes.
+As in Chapter \ref{c.BL}, the ACM2 PBL scheme is used, following the recommendations of \cite{marjanovic2014} for a locally forced simple terrain case in California; this PBL scheme includes both local (small-scale turbulent) and nonlocal (large convective plume) vertical transport, and can thus simulate both stable and unstable conditions [\cite{pleim2007combined}] A LITTLE MORE DETAIL ABOUT THE PHYSICS.  The model is forced at the lateral boundaries with NCEP Eta 212 grid (40 km) operational analysis [\cite{ncep}].  Other parameterization schemes and settings are as in Table \ref{table:BL_paramschemes}.  Model variables are output every 30 minutes.
 
-All experiments are run for the period 2009-06-26 00:00 UTC to 2009-07-11 00:00 UTC, and the first 32 hours are discarded as model spin-up.  This period was chosen for several reasons: (1) it contains a range of synoptic conditions (weak background wind June 27-July 5, and strong background wind July 6-11), (2) turbine-level wind speeds in this region are highest in the spring and summer [Zhong \textit{et al.}, 2004; Mansbach, 2010], and (3) the sensitivity to soil moisture is expected to be strongest in the warm season when radiation incident to the land surface is greatest, because changes in the relative partitioning between evapotranspiration and sensible heat flux have the largest absolute magnitude then.
+All experiments are run for the period 2009-06-26 00:00 UTC to 2009-07-11 00:00 UTC, and the first 32 hours are discarded as model spin-up.  This period was chosen for several reasons: (1) it contains a range of synoptic conditions (weak background wind June 27-July 5, and strong background wind July 6-11; Figure \textbf{XX}), (2) turbine-level wind speeds in this region are highest in the spring and summer [\cite{zhong2004diurnal}; \cite{mansbach2010synoptic}], and (3) the sensitivity to soil moisture is expected to be strongest in the warm season when radiation incident to the land surface is greatest, because changes in the relative partitioning between evapotranspiration and sensible heat flux have the largest absolute magnitude then.
 
 \subsection{Soil moisture experiments}
 
-We conduct three sets of model experiments, listed in Table \ref{table:windSol_runlist}.  In the first set of experiments, we test the sensitivity of Solano winds to soil moisture in different large-scale regions of California.  In cases dryCR, dryCV, and drySN, the background volumetric soil moisture (model variable SMOIS, m$^3$ water/m$^3$ total volume) is set to a moderately wet value of 0.25, and the soil moisture of the test region (respectively, the Coast Range, Central Valley, and Sierra Nevada, shown in Figure \ref{fig:windSol_domainmap}b) is set to a dry value of 0.1.  These test cases are compared with a control case where all land has the moderately wet soil moisture value of 0.25.  In cases wetCR, wetCV, and wetSN, the background soil moisture is set to the dry value of 0.1, and the soil moisture of the test region is set to the moderately wet value of 0.25.  These test cases are compared with a control case where all land has the dry soil moisture value of 0.1.  For reference, a soil moisture value of 0.25 m$^3$/m$^3$ represents XX\% of field capacity of the dominant soil type XX, and XX\% of the average soil moisture in XX region for XX years in NARR; 0.1 m$^3$/m$^3$ represents XX\% of field capacity of the dominant soil type XX, and XX\% of the average soil moisture in XX region for XX years in NARR.
+We conduct three sets of model experiments, listed in Table \ref{table:windSol_runlist}.  In the first set of experiments, we test the sensitivity of Solano winds to soil moisture in different large-scale regions of California.  In cases dryCR, dryCV, and drySN, the background volumetric soil moisture (model variable SMOIS, m$^3$ water/m$^3$ total volume) is set to a moderately wet value of 0.25, and the soil moisture of the test region (respectively, the Coast Range, Central Valley, and Sierra Nevada, shown in Figure \ref{fig:windSol_domainmap}b) is set to a dry value of 0.1.  These test cases are compared with a control case where all land has the moderately wet soil moisture value of 0.25.  In cases wetCR, wetCV, and wetSN, the background soil moisture is set to the dry value of 0.1, and the soil moisture of the test region is set to the moderately wet value of 0.25.  These test cases are compared with a control case where all land has the dry soil moisture value of 0.1.  For reference, climatological soil moisture, using North American Regional Reanalysis (NARR) monthly averaged soil moisture from 1979-2014, is shown in Figure \ref{fig:windSol_NARR_smois}.  A soil moisture value of 0.1 m$^3$/m$^3$  represents an abnormally dry July state for the Coast Range and Sierra Nevada and a moderately dry July state for the Central Valley.  A soil moisture value of 0.25 m$^3$/m$^3$  represents an abnormally wet July state for the Central Valley and southern Coast Range, a moderately wet July state for the northern Coast Range, and a typical July state for the Sierra Nevada.  The NARR soil moisture reanalysis is presented with the caveats that the soil properties (\textit{e.g.} field capacity) may vary between the soil dataset used in NARR and the one used in this study, and that there are known errors in NWP-derived soil moistures [\cite{marshall2003impact}; \cite{godfrey2008soil}].
+
+\begin{figure}[here]
+\includegraphics[width=1\textwidth]{ch3-wind/img/NARR_smois_maps_3.png}
+\caption{July monthly-mean volumetric soil moisture (m$^3$/m$^3$) from the North American Regional Reanalysis (NARR) dataset, 1979-2014, depth-weighted average over the top 100 cm.  Left, center, and right panels show, respectively, the average, minimum, and maximum July soil moisture for each grid point for 1979-2014.}
+\label{fig:windSol_NARR_smois}
+\end{figure}
 
 The next set of experiments tests how the Solano wind response scales with soil moisture in the Central Valley, with a normal-to-wet background in the Coast Range and Sierra Nevada.  In cases CVXX (where XX is a numeric value), the Coast Range and Sierra Nevada regions' soil moisture is set to 0.2, and the Central Valley soil moisture is set to the value specified by XX.  These test cases are compared with a control case where all land has soil moisture of 0.2.
 %In cases CVXXdry, the Coast Range and Sierra Nevada regions' soil moisture is set to 0.1, and the Central Valley soil moisture again is specified by XX.
