--- a/ch3-wind/tex/results/results.tex
+++ b/ch3-wind/tex/results/results.tex
@@ -31,7 +31,7 @@ We first characterize the differences in Solano turbine-level wind resulting fro
 
 %Before presenting the Solano winds, we quantify the synoptic and land-surface-heating forcing in each case, and we characterize the control case winds.  The synoptic forcing, measured by wind speed at 500 hPa, varies little between the model runs (Figure \ref{fig:windSol_forcings}), and synoptic winds are weak on June 27 to July 5 and strong on July 6 to 11.  In all three regions, land surface sensible heat flux is approximately 200 W/m$^2$ greater at midday with wet soil moisture (0.25) than dry soil moisture (0.1).
 
-The low-level winds in these experiments follow a strong diurnal cycle, driven by the diurnal cycle of the temperature difference and thus the pressure difference between land and ocean.  Regional low-level winds from experiment 2 at 06:00, 14:00, 18:00, and 00:00 local time, averaged over the two-week experimental period at 60 m AGL (110 m ASL), are shown in Figure \ref{fig:windSol_WindMapsRg}.  In the control case CA-0.25 (Figure \ref{fig:windSol_WindMapsRg} first column), flow is strong through the Solano pass and splits into northward and southward branches in the Central Valley.  The southward branch is stronger than the northward branch in the morning and early afternoon (06:00 and 14:00), and the northward branch strengthens in the late afternoon and evening (18:00 and 00:00).  The pressure gradient from the San Francisco Bay to the Central Valley remains strong from 14:00 to 00:00 and weakens by 06:00.  The results are consistent with previous studies of California surface winds (\cite{zhong2004diurnal}; Zhong \textit{et al.}, 2004; Mansbach, 2010).
+The low-level winds in these experiments follow a strong diurnal cycle, driven by the diurnal cycle of the temperature difference and thus the pressure difference between land and ocean.  Regional low-level winds from experiment 2 at 06:00, 14:00, 18:00, and 00:00 local time, averaged over the two-week experimental period at 60 m AGL (110 m ASL), are shown in Figure \ref{fig:windSol_WindMapsRg}.  In the control case CA-0.25 (Figure \ref{fig:windSol_WindMapsRg} first column), flow is strong through the Solano pass and splits into northward and southward branches in the Central Valley.  The southward branch is stronger than the northward branch in the morning and early afternoon (06:00 and 14:00), and the northward branch strengthens in the late afternoon and evening (18:00 and 00:00).  The pressure gradient from the San Francisco Bay to the Central Valley remains strong from 14:00 to 00:00 and weakens by 06:00.  The results are consistent with previous studies of California surface winds [\cite{zhong2004diurnal}; \cite{mansbach2010synoptic}].
 
 %\afterpage{
 %\begin{figure}[here]
@@ -185,7 +185,7 @@ neglecting the Coriolis term because of the small scale.  The first term on the 
 \label{fig:windSol_CorrMap0pt1}
 \end{figure}
 
-In order to identify the pressure gradient most relevant to Solano turbine-level winds in the control cases, we linearly regress the horizontal anomaly of pressure ($\delta p$, Section \ref{subsec:methods_model_output}) against Solano wind at 110 m ASL ($\sim$60 m AGL), for experiments 1 and 2 (control cases CA-0.1 and CA-0.25, respectively).  The regression is repeated for pressure at a range of heights and for a range of lag times, with wind lagging pressure.  The regression slopes and correlation coefficients (Figures \ref{fig:windSol_CorrMap0pt25} and \ref{fig:windSol_CorrMap0pt1}) show a consistent pattern of positive slopes and correlation coefficients over the ocean near the central coast (meaning higher pressure in those regions corresponds to faster wind), and negative slopes and correlation coefficients throughout the Central Valley, especially just north and south of the Solano pass (meaning lower pressure in those regions corresponds to faster wind).
+In order to identify the pressure gradient most relevant to Solano turbine-level winds in the control cases, we linearly regress the horizontal anomaly of pressure ($\delta p$, Section \ref{subsec:methods_model_output}) against Solano wind at 110 m ASL ($\sim$60 m AGL), for experiments 1 and 2 (control cases CA-0.1 and CA-0.25, respectively).  The regression is repeated for $\delta p$ at a range of heights and for a range of lag times, with wind lagging pressure.  The regression slopes and correlation coefficients (Figures \ref{fig:windSol_CorrMap0pt25} and \ref{fig:windSol_CorrMap0pt1}) show a consistent pattern of positive slopes and correlation coefficients over the ocean near the central coast (meaning higher pressure in those regions corresponds to faster wind), and negative slopes and correlation coefficients throughout the Central Valley, especially just north and south of the Solano pass (meaning lower pressure in those regions corresponds to faster wind).
 
 \begin{figure}[here]
 \includegraphics[width=1\textwidth]{ch3-wind/img/pgrad_wind_CA0pt1_level110.png}
@@ -253,7 +253,7 @@ We proceed to investigate how changes in pressure in the soil moisture test case
 \end{FPfigure}
 %\end{figure}
 
-The diurnal variations in low-level pressure correspond to diurnal variations in boundary layer temperature, because pressure is the vertical integral of the weight of the air column above a point, and changes in temperature change the density and thus the weight of the air column.  As expected from the differences in specific heat, diurnal temperature variations are larger in the Central Valley than over the ocean (Figure \ref{fig:windSol_TimeHeightCtrl}).  In the NCV box, the temperature near the surface (\textless 100 m ASL) declines quickly after sunset, but the temperature aloft in the boundary layer (particularly 300-700 m) remains elevated until at least midnight (Figure \ref{fig:windSol_TimeHeightCtrl}, panel 2).  This is because advection of cool oceanic air is concentrated at low levels where the wind speed is maximum, and advection is weaker above $\sim$300 m.  In the time period of these experiments (June/July), both the NCV temperature and the NCV-OCN temperature difference peak around 17:00.  The temperature difference at low levels (\textless 110 m) drops after sunset and approaches zero in the early morning some days, but the temperature difference remains positive at 110-490 m on most days, with NCV warmer than OCN by up to 12 deg C even in the early morning.  The near-surface cooling in the Central Valley is due to a combination of radiative cooling of the land surface and advection of cooler marine air by the low-level wind maximum.  The pressure difference is most negative (strongest gradient) at the same time as the maximum temperature difference, around 17:00 PST, and is smallest in magnitude (weakest gradient) just before sunrise, around 06:00, when the NCV boundary layer is coolest.  
+The diurnal variations in low-level pressure correspond to diurnal variations in boundary layer temperature.  Pressure is the vertical integral of the weight of the air column above a point, and changes in temperature change the density and thus the weight of the air column.  As expected from the differences in specific heat, diurnal temperature variations are larger in the Central Valley than over the ocean (Figure \ref{fig:windSol_TimeHeightCtrl}).  In the NCV box, the temperature near the surface (\textless 100 m ASL) declines quickly after sunset, but the temperature aloft in the boundary layer (particularly 300-700 m) remains elevated until at least midnight (Figure \ref{fig:windSol_TimeHeightCtrl}, panel 2).  This is because advection of cool oceanic air is concentrated at low levels where the wind speed is maximum, and because the stratified nocturnal boundary layer suppresses mixing and limits the vertical extent of surface cooling.  In the time period of these experiments (June/July), both the NCV temperature and the NCV-OCN temperature difference peak around 17:00 local time.  The temperature difference at low levels (\textless 110 m) drops after sunset and approaches zero in the early morning some days, but the temperature difference remains positive at 110-490 m on most days, with NCV warmer than OCN by up to 12 deg C even in the early morning.  The pressure difference is most negative (strongest gradient) at the same time as the maximum temperature difference, around 17:00 PST, and is smallest in magnitude (weakest gradient) just before sunrise, around 06:00, when the NCV boundary layer is coolest.  
 
 %\begin{figure}[here]
 \begin{FPfigure}
@@ -275,11 +275,11 @@ In the dryCV case, the NCV box experiences strong low-level heating beginning in
 \label{fig:windSol_MomTermsDiurn}
 \end{figure}
 
-The momentum advection, pressure gradient, and $u$ time tendency terms in Equation \ref{eqn:windSol_momentum} are estimated from model output for the experiment 2 control (CA-0.25; Figure \ref{fig:windSol_MomTermsDiurn}).  The pressure gradient contribution to the momentum budget is always positive; it increases through the daytime, peaks around 16:00 local time, and declines through the night.  The horizontal advection of momentum almost always contributes negatively to the momentum budget, because advection of slower upstream air from the San Francisco Bay decreases the momentum at the Solano pass.  The advection term is most negative at night, when the wind at Solano is fastest and the wind gradient between Solano and the San Francisco bay is large. The time tendency ($\frac{\partial u}{\partial t}$) term is much smaller than the pressure gradient term, even in the afternoon when the pressure gradient is largest and negative advection of momentum is small.
+The momentum advection, pressure gradient, and $u$ time tendency terms in Equation \ref{eqn:windSol_momentum} are estimated from model output for the experiment 2 control (CA-0.25; Figure \ref{fig:windSol_MomTermsDiurn}).  The pressure gradient contribution to the momentum budget is always positive; it increases through the daytime, peaks around 16:00 local time, and declines through the night.  The horizontal advection of momentum almost always contributes negatively to the momentum budget, because advection of slower upstream air from the San Francisco Bay decreases the momentum at the Solano pass.  The advection term is most negative at night, when the wind at Solano is fastest and the wind gradient between Solano and the San Francisco Bay is large. The time tendency ($\frac{\partial u}{\partial t}$) term is much smaller than the pressure gradient term, even in the afternoon when the pressure gradient is largest and negative advection of momentum is small.
 
 Using these three model-derived terms (pressure gradient, advection, and time tendency), we calculate the residual of the momentum budget (Figure  4.20, cyan line), which in Equation \ref{eqn:windSol_momentum} is attributed to the frictional dissipation term, $F\left(\frac{\partial u}{\partial z}, N\right)$. The residual is almost always a negative contribution to the momentum budget, especially during the day.  Moreover, the residual term is not in phase with wind speed, but has the expected diurnal shape of boundary layer turbulence: the residual has large negative values in the daytime when convective turbulence increases eddy viscosity and closely couples winds in the middle and upper boundary layer with the surface momentum sink; and near-zero values at night when thermal stabilization reduces convective turbulence and buffers the middle and upper residual boundary layer from friction with the surface.  We thus speculate that the residual consists largely of the drag from daytime convective turbulence.
 
-This turbulent resistance residual is of comparable magnitude to the pressure gradient and advection terms, and as such is very important for determining the magnitude and phase of the diurnal wind cycle.  In the afternoon in the experiment 2 control case (CA-0.25), the pressure gradient term is large and positive and the negative momentum advection is small.  If the residual term (interpreted as convective turbulent drag) were not also large and negative at this time, the wind would accelerate much faster than is actually observed.  Conversely, high wind speeds persist even after the pressure gradient declines between 22:00 and 04:00 local time and despite the strong advection of lower momentum air.  If the residual term during the night remained at its large negative afternoon  values, the winds would decelerate at night, rather than maintaining high speed as observed.  The decline in magnitude of the turbulent drag term at night is necessary in order to explain the observed high winds at night.
+This turbulent resistance residual is of comparable magnitude to the pressure gradient and advection terms, and as such is very important for determining the magnitude and phase of the diurnal wind cycle.  In the afternoon in the experiment 2 control case (CA-0.25), the pressure gradient term is large and positive and the negative momentum advection is small.  If the residual term (interpreted as convective turbulent drag) were not also large and negative at this time, the wind would accelerate much faster than is actually observed.  Conversely, high wind speeds persist even after the pressure gradient declines between 22:00 and 04:00 local time and despite the strong advection of lower momentum air.  If the residual term during the night remained at its large negative afternoon  values, the winds would decelerate at night, rather than maintaining high speed as observed.  The decline in magnitude of the turbulent drag term at night is necessary in order to explain the observed strength of nighttime winds.
 
 \begin{figure}[here]
 \includegraphics[width=0.9\textwidth]{ch3-wind/img/momentum_terms_diurnal_diff_dryCV.png}
@@ -290,6 +290,6 @@ This turbulent resistance residual is of comparable magnitude to the pressure gr
 In the dryCV case (experiment 2), the pressure gradient term increases relative to the control case (CA-0.25) at all hours but especially between 10:00 and 18:00 local time (Figure \ref{fig:windSol_MomTermsDiurnDiff}), when it is larger by 20\% to 30\% (cf. Figure \ref{fig:windSol_MomTermsDiurn}).  The advection term becomes more negative at those same hours relative to the control case, as faster Solano wind transports lower momentum air more effectively.  The residual (turbulent drag) term also contributes more negatively to the momentum budget in the daytime relative to the wetter control case, probably due to stronger convection from the hotter Central Valley land surface and thus greater turbulent drag.  The changes in the dryCR and drySN cases were much smaller than those in the dryCV case, with the pressure gradient term increasing by a maximum of 0.0001 to 0.0002 m/s$^2$ in the late afternoon.
 
 \subsubsection{Summary of mechanism}
-Solano wind responds to the near-surface pressure gradient between the Central Valley near the Solano pass and the central coast ocean.  Changes in boundary layer temperature at either of these locations influences this driving pressure gradient.  Soil moisture strongly influences land surface heating, and changes to soil moisture in the Central Valley strongly affect boundary layer temperature and thus near-surface pressure in the regions relevant to the Solano wind.  When Central Valley soils are dry, the atmospheric boundary layer warms from late morning to late afternoon, strengthening the pressure gradient at those hours.  At the same time, friction and advection of lower momentum air increase, due respectively to increased convection and faster lateral transport.  These terms act against the pressure gradient and limit the increase of Solano winds to $\sim$1.5 m/s on average in the late afternoon in the driest Central Valley case.
+Solano wind responds to the near-surface pressure gradient between the Central Valley near the Solano pass and the central coast ocean.  Changes in boundary layer temperature at either of these locations influences this driving pressure gradient.  Soil moisture strongly influences land surface heating, and changes to soil moisture in the Central Valley strongly affect boundary layer temperature and thus near-surface pressure in the regions relevant to the Solano wind.  When Central Valley soils are dry, the atmospheric boundary layer warms from late morning to late afternoon relative to the wet-Central-Valley-soil case, strengthening the pressure gradient at those hours.  At the same time, friction and advection of lower momentum air increase, due respectively to increased convection and faster lateral transport.  These terms act against the pressure gradient and limit the increase of Solano winds to $\sim$1.5 m/s on average in the late afternoon in the driest Central Valley case (dryCV) relative to the wet Central Valley case (C-0.25).
 
 %\end{document}
